--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "url": "https://github.com/blackbaud/help-client.git"
   },
   "scripts": {
-    "lint": "tslint 'src/**/*.ts'",
-    "test": "npm run lint"
+    "ci": "npm run test:ci && npm run build",
+    "test:ci": "npm run test:unit:ci",
+    "test:unit:ci": "npm run test:unit:base -- config/karma/ci.karma.conf.js",
+    "test:unit:base": "node --max-old-space-size=4096 node_modules/karma/bin/karma start",
+    "pretest": "npm run lint",
+    "build": "rimraf dist && tsc && webpack --config config/webpack/webpack.prod.config.js",
+    "lint": "tslint 'src/**/*.ts'"
   },
   "keywords": [],
   "author": "Blackbaud, Inc.",
@@ -23,7 +28,31 @@
   "homepage": "https://github.com/blackbaud/help-client#readme",
   "dependencies": {},
   "devDependencies": {
+    "@types/core-js": "0.9.41",
+    "@types/jasmine": "2.5.47",
+    "@types/webpack": "2.2.15",
+    "core-js": "2.4.1",
+    "fs-extra": "2.1.2",
+    "istanbul": "0.4.5",
+    "istanbul-instrumenter-loader": "0.1.0",
+    "jasmine": "2.6.0",
+    "karma": "1.6.0",
+    "karma-browserstack-launcher": "1.2.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-coverage": "1.1.1",
+    "karma-firefox-launcher": "1.0.1",
+    "karma-jasmine": "1.1.0",
+    "karma-mocha-reporter": "2.2.3",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-webpack": "2.0.3",
+    "raw-loader": "0.5.1",
+    "remap-istanbul": "github:devcrossnet/remap-istanbul",
+    "rimraf": "2.6.1",
+    "source-map-inline-loader": "github:blackbaud-bobbyearl/source-map-inline-loader",
+    "ts-loader": "2.0.3",
     "tslint": "5.1.0",
-    "typescript": "2.2.2"
+    "tslint-loader": "3.5.3",
+    "typescript": "2.2.2",
+    "webpack": "2.4.1"
   }
 }
