--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@blackbaud/help-client",
   "version": "1.0.0",
   "description": "Provides a client-side library for interacting with the Help Widget.",
+  "main": "dist/bundles/help-client.umd.js",
   "module": "index.ts",
   "engines": {
     "node": ">=6.3.1"
