--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   },
   "scripts": {
     "ci": "npm run test:ci && npm run build",
-    "test": "npm run ci",
+    "test": "npm run lint && npm run test:unit",
     "test:ci": "npm run test:unit:ci",
+    "test:unit": "npm run test:unit:base -- config/karma/local.karma.conf.js",
     "test:unit:ci": "npm run test:unit:base -- config/karma/ci.karma.conf.js",
     "test:unit:base": "node --max-old-space-size=4096 node_modules/karma/bin/karma start",
     "pretest": "npm run lint",
     "build": "rimraf dist && tsc && webpack --config config/webpack/webpack.prod.config.js",
+    "watch": "npm run test:unit -- --auto-watch --no-single-run",
     "lint": "tslint 'src/**/*.ts'"
   },
   "keywords": [],
