--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "homepage": "https://github.com/blackbaud/help-client#readme",
   "dependencies": {
-    "@types/tapable": "^0.2.4"
+    "@types/tapable": "0.2.4"
   },
   "devDependencies": {
     "@types/core-js": "0.9.41",
