--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
   },
   "homepage": "https://github.com/blackbaud/help-client#readme",
   "dependencies": {
-    "@types/tapable": "0.2.4",
-    "node-sass": "4.9.0"
+    "@types/tapable": "0.2.4"
   },
   "devDependencies": {
     "@types/core-js": "0.9.41",
@@ -55,6 +54,7 @@
     "karma-mocha-reporter": "2.2.3",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "2.0.3",
+    "node-sass": "4.9.0",
     "raw-loader": "0.5.1",
     "remap-istanbul": "0.9.5",
     "rimraf": "2.6.1",
