--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,38 @@
 {
   "compilerOptions": {
-    "declaration": true,
-    "module": "commonjs",
     "target": "es5",
-    "noImplicitAny": true,
+    "module": "es2015",
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "sourceMap": true,
+    "noEmitHelpers": true,
+    "noEmitOnError": true,
+    "noUnusedLocals": true,
+    "noImplicitAny": true,
+    "noResolve": false,
     "lib": [
       "dom",
       "es6"
     ],
-    "outDir": "dist"
+    "types": [
+      "core-js",
+      "node",
+      "jasmine",
+      "fontfaceobserver"
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@blackbaud/skyux-builder/*": [
+        "./node_modules/@blackbaud/skyux-builder/*",
+        "./*"
+      ]
+    }
   },
   "exclude": [
     "node_modules",
-    "**/*.spec.ts"
-  ]
+    "**/*.aot.ts"
+  ],
+  "compileOnSave": false,
+  "buildOnSave": false
 }
