--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,24 @@
 {
   "compilerOptions": {
+    "declaration": true,
+    "module": "commonjs",
     "target": "es5",
-    "module": "es2015",
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "noEmitHelpers": true,
-    "noEmitOnError": true,
-    "noUnusedLocals": true,
     "noImplicitAny": true,
-    "noResolve": false,
+    "noUnusedLocals": true,
+    "sourceMap": true,
+    "types": [
+      "jasmine",
+      "jasmine-ajax",
+      "node"
+    ],
     "lib": [
       "dom",
       "es6"
     ],
-    "types": [
-      "core-js",
-      "node",
-      "jasmine",
-      "fontfaceobserver"
-    ],
-    "baseUrl": ".",
-    "paths": {
-      "@blackbaud/skyux-builder/*": [
-        "./node_modules/@blackbaud/skyux-builder/*",
-        "./*"
-      ]
-    }
+    "outDir": "dist"
   },
   "exclude": [
     "node_modules",
-    "**/*.aot.ts"
-  ],
-  "compileOnSave": false,
-  "buildOnSave": false
+    "**/*.spec.ts"
+  ]
 }
