--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
   },
   "homepage": "https://github.com/blackbaud/help-client#readme",
   "dependencies": {
+    "@blackbaud/auth-client": "^2.7.1",
     "@types/tapable": "0.2.4",
+    "jwt-decode": "^2.2.0",
+    "mixpanel-browser": "^2.22.4",
     "rxjs": "6.2.1"
   },
   "devDependencies": {
