--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "homepage": "https://github.com/blackbaud/help-client#readme",
   "dependencies": {
     "@types/tapable": "0.2.4",
+    "mixpanel-browser": "^2.22.4",
     "rxjs": "6.2.1"
   },
   "devDependencies": {
