--- a/package.json
+++ b/package.json
@@ -33,10 +33,8 @@
   "homepage": "https://github.com/blackbaud/help-client#readme",
   "dependencies": {
     "@types/tapable": "0.2.4",
-    "mixpanel-browser": "2.22.4"
-  },
-  "peerDependencies": {
-    "rxjs": "^5.4.0"
+    "mixpanel-browser": "2.22.4",
+    "rxjs": "5.4.3"
   },
   "devDependencies": {
     "@types/core-js": "0.9.41",
