--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   "homepage": "https://github.com/blackbaud/help-client#readme",
   "dependencies": {
     "@types/tapable": "0.2.4",
-    "mixpanel-browser": "^2.22.4",
-    "rxjs": "6.2.1"
+    "mixpanel-browser": "2.22.4",
+    "rxjs": "5.4.3"
   },
   "devDependencies": {
     "@types/core-js": "0.9.41",
@@ -42,7 +42,7 @@
     "@types/webpack": "2.2.15",
     "core-js": "2.4.1",
     "css-loader": "0.28.11",
-    "fs-extra": "^2.1.2",
+    "fs-extra": "2.1.2",
     "html-webpack-plugin": "3.2.0",
     "istanbul": "0.4.5",
     "istanbul-instrumenter-loader": "0.1.0",
