--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "help-client-test",
-  "version": "1.0.0-rc.1",
+  "version": "2.0.0-beta.1",
   "description": "Provides a client-side library for interacting with the Help Widget.",
   "main": "dist/bundles/help-client.umd.js",
   "module": "index.ts",
