--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "help-client-test",
+  "name": "@blackbaud/help-client",
   "version": "2.0.0-beta.1",
   "description": "Provides a client-side library for interacting with the Help Widget.",
   "main": "dist/bundles/help-client.umd.js",
