--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@blackbaud/help-client",
+  "pipelineSettings": {
+    "publishToCDN": true
+  },
   "version": "2.0.0-beta.1",
   "description": "Provides a client-side library for interacting with the Help Widget.",
   "main": "dist/bundles/help-client.umd.js",
