--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@blackbaud/help-client",
-  "version": "1.3.0",
+  "pipelineSettings": {
+    "publishToCDN": true
+  },
+  "version": "2.0.0-beta.4",
   "description": "Provides a client-side library for interacting with the Help Widget.",
   "main": "dist/bundles/help-client.umd.js",
   "module": "index.ts",
@@ -19,9 +22,11 @@
     "test:unit:ci": "npm run test:unit:base -- config/karma/ci.karma.conf.js",
     "test:unit:base": "node --max-old-space-size=4096 node_modules/karma/bin/karma start",
     "pretest": "npm run lint",
-    "build": "rimraf dist && tsc && webpack --config config/webpack/webpack.prod.config.js",
+    "compress": "uglifyjs dist/bundles/help-client.umd.js -m -o dist/bundles/help-client.umd.min.js",
+    "build": "rimraf dist && tsc && webpack --config config/webpack/webpack.prod.config.js && npm run compress",
     "watch": "npm run test:unit -- --auto-watch --no-single-run",
-    "lint": "tslint 'src/**/*.ts'"
+    "lint": "tslint 'src/**/*.ts'",
+    "start": "webpack-dev-server --open --config config/webpack/webpack.dev.config.js"
   },
   "keywords": [],
   "author": "Blackbaud, Inc.",
@@ -31,14 +36,18 @@
   },
   "homepage": "https://github.com/blackbaud/help-client#readme",
   "dependencies": {
-    "@types/tapable": "0.2.4"
+    "@types/tapable": "0.2.4",
+    "mixpanel-browser": "2.22.4",
+    "rxjs": "5.4.3"
   },
   "devDependencies": {
     "@types/core-js": "0.9.41",
     "@types/jasmine": "2.5.47",
     "@types/webpack": "2.2.15",
     "core-js": "2.4.1",
+    "css-loader": "0.28.11",
     "fs-extra": "2.1.2",
+    "html-webpack-plugin": "3.2.0",
     "istanbul": "0.4.5",
     "istanbul-instrumenter-loader": "0.1.0",
     "jasmine": "2.6.0",
@@ -51,14 +60,18 @@
     "karma-mocha-reporter": "2.2.3",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "2.0.3",
+    "node-sass": "4.9.0",
     "raw-loader": "0.5.1",
     "remap-istanbul": "0.9.5",
     "rimraf": "2.6.1",
+    "sass-loader": "4.1.1",
     "source-map-inline-loader": "github:blackbaud-bobbyearl/source-map-inline-loader",
+    "style-loader": "0.21.0",
     "ts-loader": "2.0.3",
     "tslint": "5.1.0",
     "tslint-loader": "3.5.3",
-    "typescript": "2.2.2",
-    "webpack": "2.4.1"
+    "typescript": "2.3.2",
+    "webpack": "2.5.1",
+    "webpack-dev-server": "2.4.5"
   }
 }
