--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "test:unit:base": "node --max-old-space-size=4096 node_modules/karma/bin/karma start",
     "pretest": "npm run lint",
     "compress": "uglifyjs dist/bundles/help-client.umd.js -m -o dist/bundles/help-client.umd.min.js",
-    "compress:window": "uglifyjs dist/bundles/help-client.window.js -m -o dist/bundles/help-client.window.min.js",
-    "compress:all": "npm run compress && npm run compress:window",
+    "compress:global": "uglifyjs dist/bundles/help-client.global.js -m -o dist/bundles/help-client.global.min.js",
+    "compress:all": "npm run compress && npm run compress:global",
     "build": "rimraf dist && tsc && webpack --config config/webpack/webpack.prod.config.js && npm run compress:all",
     "watch": "npm run test:unit -- --auto-watch --no-single-run",
     "lint": "tslint 'src/**/*.ts'",
