Target window for RE CDN fix (#45)
* target window for RE CDN fix

* pivot from window to global naming convention

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "pipelineSettings": {
     "publishToCDN": true
   },
-  "version": "2.0.0-beta.6",
+  "version": "2.0.0-beta.7",
   "description": "Provides a client-side library for interacting with the Help Widget.",
   "main": "dist/bundles/help-client.umd.js",
   "module": "index.ts",
@@ -23,8 +23,8 @@
     "test:unit:base": "node --max-old-space-size=4096 node_modules/karma/bin/karma start",
     "pretest": "npm run lint",
     "compress": "uglifyjs dist/bundles/help-client.umd.js -m -o dist/bundles/help-client.umd.min.js",
-    "compress:amd": "uglifyjs dist/bundles/help-client.amd.js -m -o dist/bundles/help-client.amd.min.js",
-    "compress:all": "npm run compress && npm run compress:amd",
+    "compress:global": "uglifyjs dist/bundles/help-client.global.js -m -o dist/bundles/help-client.global.min.js",
+    "compress:all": "npm run compress && npm run compress:global",
     "build": "rimraf dist && tsc && webpack --config config/webpack/webpack.prod.config.js && npm run compress:all",
     "watch": "npm run test:unit -- --auto-watch --no-single-run",
     "lint": "tslint 'src/**/*.ts'",
