--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "pipelineSettings": {
     "publishToCDN": true
   },
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Provides a client-side library for interacting with the Help Widget.",
   "main": "dist/bundles/help-client.umd.js",
   "module": "index.ts",
@@ -39,8 +39,10 @@
   "homepage": "https://github.com/blackbaud/help-client#readme",
   "dependencies": {
     "@types/tapable": "0.2.4",
-    "mixpanel-browser": "2.22.4",
-    "rxjs": "5.4.3"
+    "mixpanel-browser": "2.22.4"
+  },
+  "peerDependencies": {
+    "rxjs": "^6.0.0"
   },
   "devDependencies": {
     "@types/core-js": "0.9.41",
@@ -66,6 +68,7 @@
     "raw-loader": "0.5.1",
     "remap-istanbul": "0.9.5",
     "rimraf": "2.6.1",
+    "rxjs": "6.3.3",
     "sass-loader": "4.1.1",
     "source-map-inline-loader": "github:blackbaud-bobbyearl/source-map-inline-loader",
     "style-loader": "0.21.0",
