--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "tslint-loader": "3.5.4",
     "typescript": "3.5.3",
     "webpack": "4.37.0",
-    "webpack-cli": "^3.3.6",
+    "webpack-cli": "3.3.6",
     "webpack-dev-server": "3.7.2"
   }
 }
