--- a/package.json
+++ b/package.json
@@ -69,14 +69,15 @@
     "remap-istanbul": "0.9.5",
     "rimraf": "2.6.1",
     "rxjs": "6.3.3",
-    "sass-loader": "4.1.1",
+    "sass-loader": "7.1.0",
     "source-map-inline-loader": "github:blackbaud-bobbyearl/source-map-inline-loader",
-    "style-loader": "0.21.0",
-    "ts-loader": "2.0.3",
-    "tslint": "5.1.0",
-    "tslint-loader": "3.5.3",
-    "typescript": "2.3.2",
-    "webpack": "2.5.1",
-    "webpack-dev-server": "2.4.5"
+    "style-loader": "0.23.1",
+    "ts-loader": "6.0.4",
+    "tslint": "5.18.0",
+    "tslint-loader": "3.5.4",
+    "typescript": "3.5.3",
+    "webpack": "4.37.0",
+    "webpack-cli": "3.3.6",
+    "webpack-dev-server": "3.7.2"
   }
 }
