--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
   "description": "Provides a client-side library for interacting with the Help Widget.",
   "main": "dist/bundles/help-client.umd.js",
   "module": "index.ts",
-  "engines": {
-    "node": ">=6.3.1"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/blackbaud/help-client.git"
@@ -38,12 +35,9 @@
     "url": "https://github.com/blackbaud/help-client/issues"
   },
   "homepage": "https://github.com/blackbaud/help-client#readme",
-  "dependencies": {
-    "@types/tapable": "0.2.4"
-  },
+  "dependencies": {},
   "peerDependencies": {
-    "rxjs": "^6.0.0",
-    "mixpanel-browser": "^2.22.4"
+    "rxjs": "^6.0.0"
   },
   "devDependencies": {
     "@types/core-js": "0.9.41",
@@ -65,7 +59,6 @@
     "karma-mocha-reporter": "2.2.3",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "2.0.3",
-    "mixpanel-browser": "2.22.4",
     "node-sass": "4.9.0",
     "raw-loader": "0.5.1",
     "remap-istanbul": "0.9.5",
