--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "publishToCDN": true,
     "publishToNPM": true
   },
-  "version": "2.2.0",
+  "version": "3.0.0-rc.0",
   "description": "Provides a client-side library for interacting with the Help Widget.",
   "main": "dist/bundles/help-client.umd.js",
   "module": "index.ts",
