--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "publishToCDN": true,
     "publishToNPM": true
   },
-  "version": "3.0.0-rc.0",
+  "version": "3.0.0",
   "description": "Provides a client-side library for interacting with the Help Widget.",
   "main": "dist/bundles/help-client.umd.js",
   "module": "index.ts",
@@ -51,7 +51,7 @@
     "istanbul-instrumenter-loader": "0.1.0",
     "jasmine": "2.6.0",
     "karma": "1.6.0",
-    "karma-browserstack-launcher": "1.2.0",
+    "karma-browserstack-launcher": "1.6.0",
     "karma-chrome-launcher": "2.0.0",
     "karma-coverage": "1.1.1",
     "karma-firefox-launcher": "1.0.1",
@@ -59,13 +59,13 @@
     "karma-mocha-reporter": "2.2.3",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "2.0.3",
-    "node-sass": "4.9.0",
+    "node-sass": "4.14.1",
     "raw-loader": "0.5.1",
     "remap-istanbul": "0.9.5",
     "rimraf": "2.6.1",
     "rxjs": "6.3.3",
     "sass-loader": "7.1.0",
-    "source-map-inline-loader": "github:blackbaud-bobbyearl/source-map-inline-loader",
+    "source-map-inline-loader": "1.0.0",
     "style-loader": "0.23.1",
     "ts-loader": "6.0.4",
     "tslint": "5.18.0",
@@ -73,6 +73,6 @@
     "typescript": "3.5.3",
     "webpack": "4.37.0",
     "webpack-cli": "3.3.6",
-    "webpack-dev-server": "3.7.2"
+    "webpack-dev-server": "3.11.0"
   }
 }
