--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
     "publishToCDN": true,
     "publishToNPM": true
   },
-  "version": "2.2.0",
+  "version": "3.0.0",
   "description": "Provides a client-side library for interacting with the Help Widget.",
   "main": "dist/bundles/help-client.umd.js",
   "module": "index.ts",
-  "engines": {
-    "node": ">=6.3.1"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/blackbaud/help-client.git"
@@ -38,12 +35,9 @@
     "url": "https://github.com/blackbaud/help-client/issues"
   },
   "homepage": "https://github.com/blackbaud/help-client#readme",
-  "dependencies": {
-    "@types/tapable": "0.2.4"
-  },
+  "dependencies": {},
   "peerDependencies": {
-    "rxjs": "^6.0.0",
-    "mixpanel-browser": "^2.22.4"
+    "rxjs": "^6.0.0"
   },
   "devDependencies": {
     "@types/core-js": "0.9.41",
@@ -57,7 +51,7 @@
     "istanbul-instrumenter-loader": "0.1.0",
     "jasmine": "2.6.0",
     "karma": "1.6.0",
-    "karma-browserstack-launcher": "1.2.0",
+    "karma-browserstack-launcher": "1.6.0",
     "karma-chrome-launcher": "2.0.0",
     "karma-coverage": "1.1.1",
     "karma-firefox-launcher": "1.0.1",
@@ -65,14 +59,13 @@
     "karma-mocha-reporter": "2.2.3",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "2.0.3",
-    "mixpanel-browser": "2.22.4",
-    "node-sass": "4.9.0",
+    "node-sass": "4.14.1",
     "raw-loader": "0.5.1",
     "remap-istanbul": "0.9.5",
     "rimraf": "2.6.1",
     "rxjs": "6.3.3",
     "sass-loader": "7.1.0",
-    "source-map-inline-loader": "github:blackbaud-bobbyearl/source-map-inline-loader",
+    "source-map-inline-loader": "1.0.0",
     "style-loader": "0.23.1",
     "ts-loader": "6.0.4",
     "tslint": "5.18.0",
@@ -80,6 +73,6 @@
     "typescript": "3.5.3",
     "webpack": "4.37.0",
     "webpack-cli": "3.3.6",
-    "webpack-dev-server": "3.7.2"
+    "webpack-dev-server": "3.11.0"
   }
 }
