--- a/package.json
+++ b/package.json
@@ -14,17 +14,14 @@
   },
   "scripts": {
     "ci": "npm run test:ci && npm run build",
-    "test": "npm run lint && npm run test:unit",
-    "test:ci": "npm run test:unit:ci",
-    "test:unit": "npm run test:unit:base -- config/karma/local.karma.conf.js",
-    "test:unit:ci": "npm run test:unit:base -- config/karma/ci.karma.conf.js",
-    "test:unit:base": "node --max-old-space-size=4096 node_modules/karma/bin/karma start",
-    "pretest": "npm run lint",
+    "test": "karma start local.karma.conf.js",
+    "posttest": "npm run lint",
+    "test:ci": "karma start ci.karma.conf.js",
     "compress": "uglifyjs dist/bundles/help-client.umd.js -m -o dist/bundles/help-client.umd.min.js",
     "compress:global": "uglifyjs dist/bundles/help-client.global.js -m -o dist/bundles/help-client.global.min.js",
     "compress:all": "npm run compress && npm run compress:global",
     "build": "rimraf dist && tsc && webpack --config config/webpack/webpack.prod.config.js && npm run compress:all",
-    "watch": "npm run test:unit -- --auto-watch --no-single-run",
+    "watch": "karma start local.karma.conf.js --auto-watch --no-single-run",
     "lint": "tslint 'src/**/*.ts'",
     "start": "webpack-dev-server --open --config config/webpack/webpack.dev.config.js"
   },
@@ -47,21 +44,18 @@
     "css-loader": "0.28.11",
     "fs-extra": "2.1.2",
     "html-webpack-plugin": "3.2.0",
-    "istanbul": "0.4.5",
-    "istanbul-instrumenter-loader": "0.1.0",
     "jasmine": "2.6.0",
-    "karma": "1.6.0",
-    "karma-browserstack-launcher": "1.6.0",
-    "karma-chrome-launcher": "2.0.0",
-    "karma-coverage": "1.1.1",
-    "karma-firefox-launcher": "1.0.1",
-    "karma-jasmine": "1.1.0",
-    "karma-mocha-reporter": "2.2.3",
-    "karma-sourcemap-loader": "0.3.7",
+    "karma": "6.1.0",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage": "2.0.3",
+    "karma-firefox-launcher": "2.1.0",
+    "karma-jasmine": "4.0.1",
+    "karma-mocha-reporter": "2.2.5",
+    "karma-sourcemap-loader": "0.3.8",
+    "karma-typescript": "5.3.0",
     "karma-webpack": "2.0.3",
     "node-sass": "4.14.1",
     "raw-loader": "0.5.1",
-    "remap-istanbul": "0.9.5",
     "rimraf": "2.6.1",
     "rxjs": "6.3.3",
     "sass-loader": "7.1.0",
