--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "rimraf dist && tsc && webpack --config config/webpack/webpack.prod.config.js && npm run compress:all",
     "watch": "karma start local.karma.conf.js --auto-watch --no-single-run",
     "lint": "tslint 'src/**/*.ts'",
-    "start": "webpack-dev-server --open --config config/webpack/webpack.dev.config.js"
+    "start": "webpack serve --open --config config/webpack/webpack.dev.config.js"
   },
   "keywords": [],
   "author": "Blackbaud, Inc.",
@@ -39,10 +39,9 @@
   "devDependencies": {
     "@types/core-js": "0.9.41",
     "@types/jasmine": "2.5.47",
-    "@types/webpack": "2.2.15",
     "core-js": "2.4.1",
     "fs-extra": "2.1.2",
-    "html-webpack-plugin": "3.2.0",
+    "html-webpack-plugin": "5.1.0",
     "jasmine": "2.6.0",
     "karma": "6.1.0",
     "karma-chrome-launcher": "3.1.0",
@@ -61,8 +60,8 @@
     "tslint": "5.18.0",
     "tslint-loader": "3.5.4",
     "typescript": "3.5.3",
-    "webpack": "4.37.0",
-    "webpack-cli": "3.3.6",
-    "webpack-dev-server": "3.11.0"
+    "webpack": "5.21.2",
+    "webpack-cli": "4.5.0",
+    "webpack-dev-server": "3.11.2"
   }
 }
