--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ branches:
     - master
     - /^[0-9]+\.[0-9]+\.[0-9]+.*/
     - /^rc-.*$/
+    - new.tab
 
 before_script:
   - "export DISPLAY=:99.0"
