ci: use skyux linting rules
tslint config taken from
https://github.com/blackbaud/skyux-sdk-builder/blob/71f6bf4af2267b31a1fe38d2cd8b7b69a59d9d60/tslint.json

angular-specific rules were taken out

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "karma start local.karma.conf.js",
     "posttest": "npm run lint",
     "test:ci": "karma start ci.karma.conf.js",
+    "posttest:ci": "npm run lint",
     "prebuild": "rimraf dist",
     "build": "tsc && webpack --config config/webpack/webpack.prod.config.js",
     "watch": "karma start local.karma.conf.js --auto-watch --no-single-run",
@@ -56,6 +57,7 @@
     "source-map-inline-loader": "1.0.0",
     "ts-loader": "6.0.4",
     "tslint": "5.18.0",
+    "tslint-jasmine-rules": "1.6.1",
     "tslint-loader": "3.5.4",
     "typescript": "3.5.3",
     "webpack": "5.21.2",
