--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "publishToCDN": true,
     "publishToNPM": true
   },
-  "version": "3.0.1-rc.3",
+  "version": "3.0.1-rc.4",
   "description": "Provides a client-side library for interacting with the Help Widget.",
   "main": "dist/bundles/help-client.umd.js",
   "module": "index.ts",
@@ -19,7 +19,7 @@
     "test:ci": "karma start ci.karma.conf.js",
     "posttest:ci": "npm run lint",
     "prebuild": "rimraf dist",
-    "build": "tsc && webpack --config config/webpack/webpack.prod.config.js",
+    "build": "tsc && webpack --config config/webpack/webpack.prod.config.js && cp package.json dist/",
     "watch": "karma start local.karma.conf.js --auto-watch --no-single-run",
     "lint": "tslint 'src/**/*.ts'",
     "start": "webpack serve --open --config config/webpack/webpack.dev.config.js"
