--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "source-map-inline-loader": "1.0.0",
     "ts-loader": "6.0.4",
     "tslint": "5.18.0",
+    "tslint-jasmine-rules": "1.6.1",
     "tslint-loader": "3.5.4",
     "typescript": "3.5.3",
     "webpack": "5.21.2",
