--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "publishToCDN": true,
     "publishToNPM": true
   },
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "Provides a client-side library for interacting with the Help Widget.",
   "main": "dist/bundles/help-client.umd.js",
   "module": "index.ts",
@@ -18,7 +18,7 @@
     "posttest": "npm run lint",
     "test:ci": "karma start ci.karma.conf.js",
     "prebuild": "rimraf dist",
-    "build": "tsc && webpack --config config/webpack/webpack.prod.config.js",
+    "build": "tsc && webpack --config config/webpack/webpack.prod.config.js && cp package.json dist",
     "watch": "karma start local.karma.conf.js --auto-watch --no-single-run",
     "lint": "tslint 'src/**/*.ts'",
     "start": "webpack serve --open --config config/webpack/webpack.dev.config.js"
@@ -56,6 +56,7 @@
     "source-map-inline-loader": "1.0.0",
     "ts-loader": "6.0.4",
     "tslint": "5.18.0",
+    "tslint-jasmine-rules": "1.6.1",
     "tslint-loader": "3.5.4",
     "typescript": "3.5.3",
     "webpack": "5.21.2",
